--- a/package.json
+++ b/package.json
@@ -8,15 +8,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.4.2",
+    "@heroicons/react": "1.0.5",
+    "@tailwindcss/forms": "0.4.0",
+    "date-fns": "2.27.0",
+    "dotenv": "10.0.0",
+    "ether-swr": "2.0.1",
+    "ethers": "5.5.2",
+    "ethers-multicall": "0.2.1",
+    "graphql": "16.2.0",
+    "graphql-request": "3.7.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "8.1.0",
+    "swr": "1.1.1",
+    "urql": "2.0.6",
+    "wagmi": "0.1.3"
   },
   "devDependencies": {
-    "@types/node": "16.11.12",
-    "@types/react": "17.0.37",
+    "autoprefixer": "10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
-    "typescript": "4.5.3"
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.5"
   }
 }
