--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "graphql-request": "3.7.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-confetti": "6.0.1",
     "react-dom": "17.0.2",
     "react-toastify": "8.1.0",
+    "react-use": "17.3.2",
     "swr": "1.1.1",
     "urql": "2.0.6",
     "wagmi": "0.1.5"
