--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
     "dotenv": "10.0.0",
     "ether-swr": "2.0.1",
     "ethers": "5.5.2",
-    "ethers-multicall": "0.2.1",
     "graphql": "16.2.0",
     "graphql-request": "3.7.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-confetti": "6.0.1",
     "react-dom": "17.0.2",
+    "react-icons": "4.3.1",
     "react-toastify": "8.1.0",
     "react-use": "17.3.2",
     "swr": "1.1.1",
-    "urql": "2.0.6",
     "wagmi": "0.1.5"
   },
   "devDependencies": {
