--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-confetti": "6.0.1",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
+    "react-share": "4.4.0",
     "react-toastify": "8.1.0",
     "react-use": "17.3.2",
     "swr": "1.1.1",
